testsuite/tests/th/T19709d.stderr

T19709d.hs:6:2: warning: [-Wincomplete-patterns (in -Wextra)]
    Pattern match(es) are non-exhaustive
    In a case alternative:
        Patterns of type ‘String’ not matched:
            []
            [p] where p is not one of {'h'}
            (p:_:_) where p is not one of {'h'}
            ['h']
            ...

T19709d.hs:1:1: error:
    Exception when trying to run compile-time code:
      T19709d.hs:6:2-46: Non-exhaustive patterns in case

    Code: (case tail "hello" of "hello" -> return [])
